Fix contributor spacing

--- a/docs/_static/css/custom.css
+++ b/docs/_static/css/custom.css
@@ -19,6 +19,7 @@ img {
     width: 50px;
     height: 50px;
     border-radius: 25px; /* Optional: Makes the image circular */
+    border: 3px solid  #3C88BE;
 }
 
 figure {
